New functionality - scoreboard

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         </div>
         <h4 class="winner">&nbsp;</h4>
         <button class="button-58" id="buttonRoll">Roll it!</button>
-    
+       
+        <div class="scoreBoard">
+           <div class="p1">
+            <h4>Player 1</h4>
+            <p id="scoreP1">0</p>
+            </div>
+            <p>X</p>
+            <div class="p2">
+                <h4>Player 2</h4>
+                <p id="scoreP2">0</p>
+            </div>
+        </div>
         <script src="script.js"></script>
 </body>
 </html>
